--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, intial-sacle=1.0">
-    <header>
-        <title>Do your task!</title>
-        <link rel="stylesheet" href="">
-    </header>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, intial-sacle=1.0" />
+  <header>
+    <title>Do your task!</title>
+    <link rel="stylesheet" href="style.css" />
+  </header>
+  <body>
+    <div id="app">
+      <h1>complete your daily task!</h1>
+      <div id="filters">
+        <button onclick="filterTasks('all')">All</button>
+        <button onclick="filterTasks('completed')">completed</button>
+        <button onclick="filterTasks('incomplete')">Incomplete</button>
+      </div>
+      <ul id="todo-list"></ul>
+    </div>
+    <script src=""></script>
+  </body>
 </html>
