--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
         <button onclick="filterTasks('completed')">completed</button>
         <button onclick="filterTasks('incomplete')">Incomplete</button>
       </div>
-      <ul id="todo-list"></ul>
+      <ul id="todo-list">
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 3</li>
+      </ul>
     </div>
-    <script src=""></script>
+    <script src="scrpit.js"></script>
   </body>
 </html>
